# prttl

./: .gitignore  .gitmodules  Cargo.toml  DesignDecisions.md  HOW_TO_RELEASE.md  README.md  build.rs  pyproject.toml  typos.toml
.github/workflows/: build.yml  manylinux_build.sh  musllinux_build.sh
src/: ast.rs  bn_sorting_ids.rs  cli.rs  compare.rs  constants.rs  context.rs  decoders.rs  error.rs  formatter.rs  grammar.rs  input.rs  lib.rs  main.rs  options.rs  parser.rs
src/vocab/: mod.rs  prtr.rs  prtyr.rs
tests/: format.rs  from.blank_nodes_with_indices.ttl  from.labels.ttl  to.blank_nodes_with_indices.ttl  to.labels.ttl  w3c_testsuite.rs
tree-sitter/: grammar.js
tree-sitter/test/corpus/: mapping.txt.license
