# SPDX-FileCopyrightText: 2022 Helsing GmbH
#
# SPDX-License-Identifier: Apache-2.0

[package]
authors = [
    "Tpt <thomas@pellissier-tanon.fr>",
    "Robin Vobruba <hoijui.quaero@gmail.com>"
    ]
description = "Pretty-printer for RDF Turtle"
edition = "2021"
keywords = ["pretty-print", "rdf", "turtle"]
categories = ["command-line-utilities", "development-tools", "value-formatting"]
license = "Apache-2.0"
name = "turtlefmt"
readme = "README.md"
repository = "https://github.com/helsing-ai/turtlefmt"
homepage = "https://github.com/helsing-ai/turtlefmt"
rust-version = "1.81.0"
version = "0.1.2"

[lints.rust]
rust_2021_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
wildcard_enum_match_arm = "warn"
# string_slice = "warn"
# indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
#shadow_reuse = "warn"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
#default_trait_access = "allow"
#option_if_let_else = "allow"
struct_excessive_bools = "allow"

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
cli_utils = { version = "0.10", features = ["logging"], package = "cli_utils_hoijui" }
const_format = { version = "0.2", default-features = false }
diffy = { version = "0.4", default-features = false }
git-version = "0.3"
oxrdf = { version = "0.2", default-features = false, features = ["rdf-star"] }
oxttl = { version = "0.1", default-features = false, features = ["rdf-star"] }
regex = { version = "1.11", default-features = false }
thiserror = { version = "2.0", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
oxrdf = { version = "0.2", default-features = false, features = ["rdf-star"] }
oxttl = { version = "0.1", default-features = false, features = ["rdf-star"] }
pretty_assertions = { version = "1.4", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }
